<resources>
    <string name="app_name">MRM Lottery</string>

    <string name="text_home">Inicio</string>
    <string name="text_tickets">Vendidos</string>
    <string name="text_winners">Ganadores</string>
    <string name="text_earnings">Ingresos</string>

    <string name="symbol_dollar">$</string>

    <string name="action_undo">Deshacer</string>
    <string name="action_send_list">Enviar</string>
    <string name="action_view">Visualizar</string>

    <string name="btn_add_detail">Agregar Jugada</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_clear">Limpiar</string>

    <string name="detail_header_type">Jugada</string>
    <string name="detail_header_number">Número</string>
    <string name="detail_header_points">Puntos</string>

    <string name="btn_select_lotteries">Seleccionar loterías</string>
    <string name="btn_see_details">Ver</string>
    <string name="btn_register_ticket">Vender</string>

    <!-- HomeFragment -->
    <string name="fragment_home_title">Registrar nuevo ticket</string>
    <string name="selected_lotteries_label">Loterías selecciondas:\n%s</string>
    <string name="dialog_title_error">Mensaje de error</string>
    <string name="no_selected_lotteries">Loterías seleccionadas:\n-</string>
    <!-- Validations -->
    <string name="error_invalid_play_points">Ingrese una cantidad válida de puntos</string>
    <string name="error_invalid_play_number">Ingrese un número válido</string>

    <!-- TicketsFragment -->
    <string name="fragment_tickets_title">Tickets vendidos</string>
    <string name="ticket_header_id">ID</string>
    <string name="ticket_header_created_at">Fecha y hora</string>
    <string name="ticket_header_lotteries">Loterías</string>
    <string name="ticket_header_details">Detalles</string>
    <string name="error_fetching_sold_tickets">No se han podido cargar los tickets vendidos.</string>

    <!-- TicketActivity -->
    <string name="btn_pdf">Ver PDF</string>
    <string name="label_ticket_id">Ticket:</string>
    <string name="label_ticket_created_at">Fecha de compra:</string>
    <string name="label_ticket_total">Total:</string>
    <string name="error_fetching_ticket">No se ha podido cargar la info del ticket seleccionado.</string>

    <!-- WinnersFragment -->
    <string name="fragment_winners_title">Jugadas ganadoras</string>
    <string name="btn_pay_winner">Pagar</string>
    <string name="label_reward">Premio</string>
    <string name="error_fetch_winners">No se pudo cargar la lista de ganadores.</string>

    <!-- EarningsFragment -->
    <string name="fragment_earnings_title">Balance y últimos movimientos</string>
    <string name="error_fetch_earnings">No se pudo obtener la información de ganancias</string>
    <string name="error_fetch_balance_movements">No se pudo obtener la información de sus movimientos</string>
    <string name="already_paid">Este ticket ya está pagado</string>
    <string name="btn_remove_ticket_play">Eliminar jugada</string>
    <string name="btn_delete_ticket">Anular ticket</string>
    <string name="retrofit_response_not_successful">Respuesta inesperada del servidor</string>
    <string name="error_unexpected">Ocurrió un error inesperado</string>
    <string name="unauthorized_response_needs_login">Su sesión ha caducado. Por favor ingrese nuevamente.</string>

</resources>
