<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tickets"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/text_tickets"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_winners"
        android:enabled="true"
        android:icon="@drawable/ic_happy_face"
        android:title="@string/text_winners"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_total"
        android:enabled="true"
        android:icon="@drawable/ic_money"
        android:title="@string/text_earnings"
        app:showAsAction="ifRoom" />
</menu>