<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.youtube.sorcjc.billetero.ui.fragment.ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="Cifras" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="Total tiempos" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="Excedente" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollList"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ibUndo"
            android:layout_width="50dp"
            android:contentDescription="@string/action_undo"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_action_undo" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/action_send_list"
            android:textColor="#fff" />

        <ImageButton
            android:id="@+id/ibViewList"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_action_zoom"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/action_view" />
    </LinearLayout>
</LinearLayout>
